force-app/main/default/objects/IntelUserPermissionData__c/fields/PermissionSetGroups__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetGroups__c</fullName>
    <label>PermissionSetGroups</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>