force-app/main/default/objects/IntelUserPermissionData__c/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <label>UserEmail</label>
    <type>TextArea</type>
</CustomField>